fix header on ios mobile where hamburger icon pushed left

--- a/_sass/main/_layout.scss
+++ b/_sass/main/_layout.scss
@@ -1,5 +1,6 @@
 $header-height: 94px;
 $header-height-mobile: 65px;
+$hamburger-size: 36px;
 
 #page-overlay {
   display: none;
@@ -139,14 +140,15 @@ a.home-anchor {
 
   @include media-query($on-mobile) {
     $menu-width: 282px;
+    width: $hamburger-size; // fixes ios issue where header hamburger icon gets pushed left because width of underlying menu container is factored into this width. Fix by restricting that width to the size it's supposed to be
 
     label[for="nav-trigger"] {
       display: flex;
       justify-content: center;
       align-items: center;
 
-      width: 36px;
-      height: 36px;
+      width: $hamburger-size;
+      height: $hamburger-size;
       z-index: 2; // keep it over the menu icon
       cursor: pointer;
     }
